<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hansa Teutonica</string>
    <string name="action_settings">Settings</string>

    <!--ACCESSIBILITY-->
    <string name="gameboard">Plateau de Jeu</string>
    <string name="button_cancel">Bouton Annuler</string>
    <string name="button_pawntype">Bouton Pawntype</string>
    <string name="button_escritoire">Bouton Escritoire</string>
    <string name="button_bursa">Bouton Bursa</string>
    <string name="button_bonus_marker">Bouton Jeton Bonus</string>
    <string name="button_submit">Bouton Valider</string>
    <string name="button_pause">Bouton Pause</string>

    <!--ALERT STRING-->
    <string name="alert_confirm">Confirmer</string>
    <string name="alert_cancel">Annuler</string>

    <!--ALERT BURSA STRING-->
    <string name="ab_title">Action Bursa</string>
    <string name="ab_stock">Stock</string>
    <string name="ab_move">M déplacé : </string>
    <string name="ab_bursa">Bursa</string>
    <string name="ab_merchant">M:</string>
    <string name="ab_trader">T:</string>
    <string name="ab_summary">Etat de la Réserve après mouvement</string>
    <string name="ab_too_low">Le nombre de Commerçants doit être supérieur ou égal à 0.</string>
    <string name="ab_too_much_bursa">Votre pouvoir Bursa n\'est pas assez élevé.</string>
    <string name="ab_too_much_mer">Vous n\'avez pas autant de Marchand dans votre Stock.</string>

    <string name="start_new_game">Commencer une nouvelle partie</string>
    <string name="player">Joueur</string>

    <!--DIALOG PAUSE-->
    <string name="pause_title">Pause</string>
    <string name="pause_continue">Continuer</string>
    <string name="pause_save">Sauvegarder</string>
    <string name="pause_rules">Règles</string>
    <string name="pause_main_menu">Retour au Menu Principal</string>

    <string name="color_already_use">Une couleur ne peut pas être utilisé pour deux joueur</string>
    <string name="not_enough_player">Veuillez séléctionner au moins trois joueur pour démarrer la partie</string>


    <string-array name="player">
        <item>Player</item>
        <item>IA Random</item>
        <item>IA Kontoirs</item>
        <item>IA Bonus</item>
        <item>Aucun</item>
    </string-array>
    <string-array name="color">
        <item>Red</item>
        <item>Yellow</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Green</item>
    </string-array>
    <!--Competences-->
    <string name="stock">Stock</string>
    <string name="supply">Réserve</string>
    <string name="clavis_urbis">Clavis Urbis</string>
    <string name="privilegium">Privilegium</string>
    <string name="liber_sophia">Liber Sophia</string>
    <string name="actiones">Actiones</string>
    <string name="bursa">Bursa</string>

    <!--DIALOG ESCRITOIRE-->
    <string name="esc_title">Escritoire</string>
    <string name="title_activity_main_menu">Menu Principal</string>

    <string name="hello_world">Hello world!</string>
    <string name="new_game">Nouvelle partie</string>
    <string name="load_game">Charger une partie</string>
    <string name="options_game">Options</string>
    <string name="exit_game">Quitter</string>
    <string name="rulesFile">/sdcard/rulesfr.pdf</string>
    <string name="noApplicationPDF">Aucune application disponible pour visionner du pdf</string>

    <!--Bonus Marker Strings-->
    <string name="bonus_marker_on_hand">Jetons En Main</string>
    <string name="bonus_marker_in_plate">Jetons à Replacer</string>
    <string name="bonus_marker_used">Jeton Utilisés</string>

    <string-array name="powers">
        <item>Actiones</item>
        <item>Bursa</item>
        <item>Clavis Urbis</item>
        <item>Liber Sophia</item>
        <item>Privilegium</item>
    </string-array>


</resources>
