<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/b_continue"
        android:text="@string/pause_continue"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/b_save"
        android:text="@string/pause_save"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Button
        android:id="@+id/b_rules"
        android:text="@string/pause_rules"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Button
        android:id="@+id/b_quit"
        android:text="@string/pause_quit"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />


</LinearLayout>