<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!--Stock line-->
    <TextView
        android:id="@+id/ab_stock"
        android:text="@string/ab_stock"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ab_mer_stock"
        android:text="@string/ab_merchant"
        android:layout_alignBaseline="@id/ab_stock"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ab_mer_nb_stock"
        android:layout_toRightOf="@id/ab_mer_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ab_tra_nb_stock"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ab_tra_stock"
        android:text="@string/ab_trader"
        android:layout_toLeftOf="@id/ab_tra_nb_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/ab_bursa_lbl"
        android:text="@string/ab_bursa"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ab_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ab_bursa_nb"
        android:padding="5dp"
        android:layout_alignBaseline="@id/ab_bursa_lbl"
        android:layout_toRightOf="@id/ab_bursa_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:id="@+id/layout_move"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ab_bursa_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/ab_move_lbl"
            android:text="@string/ab_move"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/ab_bursa_mer"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/ab_bursa_plus"
            android:text="+"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/ab_bursa_minus"
            android:text="-"
            android:layout_weight="2"

            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/layout_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/ab_summary"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/ab_merchant"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/ab_mer_recap"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="T:"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/ab_tra_recap"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>