<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/LinearBonusMarkerTheme">

        <TextView
            android:text="@string/bonus_marker_on_hand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/list_bm_on_hand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:background="@color/blue"
        android:layout_width="2dp"
        android:layout_height="match_parent"/>

    <LinearLayout style="@style/LinearBonusMarkerTheme" >

        <TextView
            android:text="@string/bonus_marker_in_plate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/list_bm_in_plate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <View
        android:background="@color/blue"
        android:layout_width="2dp"
        android:layout_height="match_parent"/>

    <LinearLayout style="@style/LinearBonusMarkerTheme" >

        <TextView
            android:text="@string/bonus_marker_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/list_bm_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</LinearLayout>