<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circleview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--**********************PLAYER STOCK******************************-->

    <TextView
        android:id="@+id/txt_stock"
        style="@style/DialogFont"
        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/dialog_escritoire_margin"

        android:layout_marginStart="@dimen/dialog_escritoire_margin"
        android:text="@string/stock" />

    <!--There isn't any SquareView.
        Instead, we use Empty TextView to display the color of the player. -->
    <TextView
        android:id="@+id/color_trader_stock"

        android:layout_width="@dimen/size_player_color_view"
        android:layout_height="@dimen/size_player_color_view"
        android:layout_alignTop="@id/txt_stock"

        android:layout_marginLeft="@dimen/space_between_pawn_component"
        android:layout_marginStart="@dimen/space_between_pawn_component"
        android:layout_toEndOf="@id/txt_stock"
        android:layout_toRightOf="@id/txt_stock" />

    <TextView
        android:id="@+id/nb_trader_stock"
        style="@style/DialogFont"

        android:layout_alignTop="@id/txt_stock"
        android:layout_marginLeft="@dimen/space_between_component"
        android:layout_marginStart="@dimen/space_between_component"

        android:layout_toEndOf="@id/color_trader_stock"
        android:layout_toRightOf="@id/color_trader_stock" />


    <!-- Display the color of the player's merchant-->
    <fr.univ_rouen.hansa.view.CircleView
        android:id="@+id/color_merchant_stock"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignTop="@id/txt_stock"
        android:layout_marginLeft="@dimen/space_between_pawn_component"
        android:layout_marginStart="@dimen/space_between_pawn_component"
        android:layout_toEndOf="@id/nb_trader_stock"
        android:layout_toRightOf="@id/nb_trader_stock"
        circleview:cRadius="@integer/esc_merchant_radius" />

    <TextView
        android:id="@+id/nb_merchant_stock"
        style="@style/DialogFont"
        android:layout_alignTop="@id/txt_stock"
        android:layout_marginLeft="@dimen/space_between_component"
        android:layout_marginStart="@dimen/space_between_component"
        android:layout_toEndOf="@id/color_merchant_stock"
        android:layout_toRightOf="@id/color_merchant_stock" />

    <!--Display an Horizontal Line-->
    <View
        android:id="@+id/separator_stock_comp"
        style="@style/HorizontalLine"
        android:layout_below="@id/txt_stock" />

    <!--**********************PLAYER COMPETENCES******************************-->

    <!--************FIRST COLUMNS TITLES******************-->
    <TextView
        android:id="@+id/txt_clavis_urbis"
        style="@style/DialogFont"
        android:layout_alignLeft="@id/txt_stock"
        android:layout_alignStart="@id/txt_stock"
        android:layout_below="@id/separator_stock_comp"
        android:text="@string/clavis_urbis" />


    <TextView
        android:id="@+id/txt_privilegium"
        style="@style/DialogFont"
        android:layout_alignLeft="@id/txt_stock"
        android:layout_alignStart="@id/txt_stock"
        android:layout_below="@id/txt_clavis_urbis"
        android:text="@string/privilegium" />


    <TextView
        android:id="@+id/txt_liber_sophia"
        style="@style/DialogFont"
        android:layout_alignLeft="@id/txt_stock"
        android:layout_alignStart="@id/txt_stock"
        android:layout_below="@id/txt_privilegium"
        android:text="@string/liber_sophia" />

    <!--************FIRST COLUMNS VALUES******************-->
    <TextView
        android:id="@+id/nb_clavis_urbis"
        style="@style/DialogFont"
        android:layout_alignTop="@id/txt_clavis_urbis"
        android:layout_marginLeft="@dimen/space_between_component"
        android:layout_marginStart="@dimen/space_between_component"
        android:layout_toEndOf="@id/txt_clavis_urbis"
        android:layout_toRightOf="@id/txt_clavis_urbis" />


    <TextView
        android:id="@+id/color_privilegium"
        android:layout_width="@dimen/size_color_view"
        android:layout_height="@dimen/size_color_view"
        android:layout_alignLeft="@id/nb_clavis_urbis"
        android:layout_alignStart="@id/nb_clavis_urbis"
        android:layout_below="@id/nb_clavis_urbis" />

    <TextView
        android:id="@+id/nb_liber_sophia"
        style="@style/DialogFont"
        android:layout_alignLeft="@id/nb_clavis_urbis"
        android:layout_alignStart="@id/nb_clavis_urbis"
        android:layout_below="@id/txt_privilegium" />


    <!--************SECOND COLUMNS VALUES******************-->
    <TextView
        android:id="@+id/nb_actiones"
        style="@style/DialogFont"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/txt_clavis_urbis"
        android:layout_marginEnd="@dimen/dialog_escritoire_margin"
        android:layout_marginLeft="@dimen/space_between_component"
        android:layout_marginRight="@dimen/dialog_escritoire_margin"
        android:layout_marginStart="@dimen/space_between_component" />


    <TextView
        android:id="@+id/nb_bursa"
        style="@style/DialogFont"
        android:layout_alignLeft="@id/nb_actiones"
        android:layout_alignStart="@id/nb_actiones"
        android:layout_below="@id/nb_actiones" />


    <!--************SECOND COLUMNS TITLES******************-->
    <TextView
        android:id="@+id/txt_actiones"
        style="@style/DialogFont"
        android:layout_alignTop="@id/txt_clavis_urbis"
        android:layout_marginLeft="@dimen/space_between_column"
        android:layout_marginStart="@dimen/space_between_column"
        android:layout_toLeftOf="@id/nb_actiones"
        android:layout_toStartOf="@id/nb_actiones"
        android:text="@string/actiones" />

    <TextView
        android:id="@+id/txt_bursa"
        style="@style/DialogFont"
        android:layout_alignLeft="@id/txt_actiones"
        android:layout_alignStart="@id/txt_actiones"
        android:layout_below="@id/txt_actiones"
        android:text="@string/bursa" />

    <!--Another Horizontal Line-->
    <View
        android:id="@+id/separator_comp_supply"
        style="@style/HorizontalLine"
        android:layout_below="@id/txt_liber_sophia" />


    <!--**********************PLAYER SUPPLY******************************-->
    <TextView
        android:id="@+id/txt_supply"
        style="@style/DialogFont"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/separator_comp_supply"
        android:layout_marginLeft="@dimen/dialog_escritoire_margin"
        android:layout_marginStart="@dimen/dialog_escritoire_margin"
        android:paddingBottom="5dp"
        android:text="@string/supply" />


    <TextView
        android:id="@+id/color_trader_supply"
        android:layout_width="@dimen/size_player_color_view"
        android:layout_height="@dimen/size_player_color_view"
        android:layout_alignTop="@id/txt_supply"
        android:layout_marginLeft="@dimen/space_between_pawn_component"
        android:layout_marginStart="@dimen/space_between_pawn_component"
        android:layout_toEndOf="@id/txt_supply"
        android:layout_toRightOf="@id/txt_supply" />

    <TextView
        android:id="@+id/nb_trader_supply"
        style="@style/DialogFont"

        android:layout_alignTop="@id/txt_supply"
        android:layout_marginLeft="@dimen/space_between_component"
        android:layout_marginStart="@dimen/space_between_component"

        android:layout_toEndOf="@id/color_trader_supply"
        android:layout_toRightOf="@id/color_trader_supply" />

    <fr.univ_rouen.hansa.view.CircleView
        android:id="@+id/color_merchant_supply"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignTop="@id/txt_supply"
        android:layout_marginLeft="@dimen/space_between_pawn_component"
        android:layout_marginStart="@dimen/space_between_pawn_component"
        android:layout_toEndOf="@id/nb_trader_supply"
        android:layout_toRightOf="@id/nb_trader_supply"
        circleview:cRadius="@integer/esc_merchant_radius" />

    <TextView
        android:id="@+id/nb_merchant_supply"
        style="@style/DialogFont"
        android:layout_alignTop="@id/txt_supply"
        android:layout_marginLeft="@dimen/space_between_component"
        android:layout_marginStart="@dimen/space_between_component"
        android:layout_toEndOf="@id/color_merchant_supply"
        android:layout_toRightOf="@id/color_merchant_supply" />

</RelativeLayout>